la til min info

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <h2> Lamek Tesfazghi</h2>
               <h4> Gruppemedlem </h4>
             <!-- Skriv inn informasjon om deg selv i paragrafen under-->
-            <p> </p>
+            <p> Intressert i fotball og basket på fritiden. går site åre IT </p>
               </div>
 
               <div class="col-md-3 profile text-center">
