--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-3 profile text-center">
               <div class="img-box">
                   <!-- Legg inn bilde -->
-               <img src="" class="img-responsive">
+                  <img src="Bilder/Picture2.png" class="img-responsive">
                   <ul>
                     <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
                     <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
