--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="img-box">
              <img src="Bilder/Picture1.png" class="img-responsive">
                 <ul>
-                  <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                  <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                  <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
+                  <a href="#" target="_blank"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
+                  <a href="#" target="_blank"><li><i class="fa-brands fa-facebook"></i></li></li></a>
+                  <a href="#" target="_blank"><li><i class="fa-brands fa-twitter"></i></li></li></a>
                 </ul> 
             </div>
             <h2> Simen Amundsen</h2>
@@ -34,9 +34,9 @@
                   <!-- Legg inn bilde -->
                   <img src="Bilder/Picture2.png" class="img-responsive">
                   <ul>
-                    <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                    <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                    <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
+                    <a href="#" target="_blank"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
+                    <a href="#" target="_blank"><li><i class="fa-brands fa-facebook"></i></li></li></a>
+                    <a href="#" target="_blank"><li><i class="fa-brands fa-twitter"></i></li></li></a>
                   </ul> 
               </div>
               <h2> Lamek Tesfazghi</h2>
@@ -50,9 +50,9 @@
                     <!-- Legg inn bilde -->
                  <img src="" class="img-responsive">
                     <ul>
-                      <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                      <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                      <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
+                      <a href="#" target="_blank"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
+                      <a href="#" target="_blank"><li><i class="fa-brands fa-facebook"></i></li></li></a>
+                      <a href="#" target="_blank"><li><i class="fa-brands fa-twitter"></i></li></li></a>
                     </ul> 
                 </div>
                 <h2> Daniel Vu</h2>
@@ -64,17 +64,19 @@
                 <div class="col-md-3 profile text-center">
                   <div class="img-box">
                       <!-- Legg inn bilde -->
-                   <img src="" class="img-responsive">
+                      <img src="Bilder/Picture4.png" class="img-responsive" width="200" height="200">
                       <ul>
-                        <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                        <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                        <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
+                        <a href="https://www.linkedin.com/in/nam-ngo-421377327/" target="_blank"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
+                        <a href="https://www.facebook.com/profile.php?id=100005679243998&locale=nb_NO" target="_blank"><li><i class="fa-brands fa-facebook"></i></li></li></a>
+                        <a href="#" target="_blank"><li><i class="fa-brands fa-twitter"></i></li></li></a>
                       </ul> 
                   </div>
                     <h2> Nam Hao Tra Ngo</h2>
                     <h4> Gruppemedlem </h4>
                      <!-- Skriv inn informasjon om deg selv i paragrafen under-->
-                    <p> </p>
+                    <p>Jeg er interessert i å spille, noe som har gitt meg en god forståelse for ulike spillmekanikker og strategisk tenkning.</p>
+                    <br>
+                    <p>Jeg liker å lage kode spill og spill mekanikker på fritiden, noe som har utviklet mine ferdigheter i kreativ problemløsning, programmering og design</p>
                     </div>
                  
 </section>
