Lagt til litt om Daniel og Bilde

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h2> Daniel Vu</h2>
                 <h4> Gruppemedlem </h4>
                 <!-- Skriv inn informasjon om deg selv i paragrafen under-->
-                <p>  </p>
+                <p> Jeg interesserer meg for fotball, liker å være sosial, og er bachelorstudent ved Universitetet i Agder </p>
                 </div>
 
                 <div class="col-md-3 profile text-center">
