--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <div class="col-md-3 profile text-center">
                 <div class="img-box">
                     <!-- Legg inn bilde -->
-                 <img src="" class="img-responsive">
+                 <img src="Bilder\Pitcure3.jpg" class="img-responsive">
                     <ul>
                       <a href="#" target="_blank"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
                       <a href="#" target="_blank"><li><i class="fa-brands fa-facebook"></i></li></li></a>
