lagd til en ny mappe for biografi og lagd til min egen biografi med link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       
                     </ul> 
                 </div>
-                <h2> Daniel Vu</h2>
+                <h2> <a href="C:\Users\danny\OneDrive\Documents\UIA\is_310\Is310Prosjekt\Biografi\Daniel_Vu.html"> Daniel Vu</a> </h2>
                 <h4> Gruppemedlem </h4>
                 <!-- Skriv inn informasjon om deg selv i paragrafen under-->
                 <p> Jeg interesserer meg for fotball, liker å være sosial, og er bachelorstudent ved Universitetet i Agder </p>
