--- a/index.html
+++ b/index.html
@@ -1,85 +1,81 @@
 <!DOCTYPE html>
+<html lang="no">
+<head>
+    <title>IT Gruppe 14</title>
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
 
-<html>  
-<head> 
- <title> IT Gruppe 14</title>   
- <link href="style.css" rel="stylesheet">
- <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-  </head>
-
-  <body>
-<section class="team">
-            <div class="container">
-            <h1> Vår gruppe </h1>
+<body>
+    <section class="team">
+        <div class="container">
+            <h1>Vår gruppe</h1>
             <div class="row">
-            <div class="col-md-3 profile text-center">
-            <div class="img-box">
-             <img src="Bilder/Picture1.png" class="img-responsive">
-                <ul>
-                  <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                  <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                  <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
-                </ul> 
-            </div>
-            <h2> Simen Amundsen</h2>
-            <h4> Gruppemedlem/leder </h4>
-            <p> Liker å være i fysisk aktivitet og sosial sammenhenger </p>
-            </div>
 
-            <div class="col-md-3 profile text-center">
-              <div class="img-box">
-                  <!-- Legg inn bilde -->
-                  <img src="Bilder/Picture2.png" class="img-responsive">
-                  <ul>
-                    <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                    <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                    <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
-                  </ul> 
-              </div>
-              <h2> Lamek Tesfazghi</h2>
-              <h4> Gruppemedlem </h4>
-            <!-- Skriv inn informasjon om deg selv i paragrafen under-->
-            <p> Intressert i fotball og basket på fritiden. Går siste åre IT </p>
-              </div>
-
-              <div class="col-md-3 profile text-center">
-                <div class="img-box">
-                    <!-- Legg inn bilde -->
-                 <img src="" class="img-responsive">
-                    <ul>
-                      <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                      <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                      <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
-                    </ul> 
-                </div>
-                <h2> Daniel Vu</h2>
-                <h4> Gruppemedlem </h4>
-                <!-- Skriv inn informasjon om deg selv i paragrafen under-->
-                <p>  </p>
-                </div>
-
+                <!-- Simen Amundsen -->
                 <div class="col-md-3 profile text-center">
-                  <div class="img-box">
-                      <!-- Legg inn bilde -->
-                   <img src="" class="img-responsive">
-                      <ul>
-                        <a href="#"><li><i class="fa-brands fa-linkedin-in"></i></li></li></a>
-                        <a href="#"><li><i class="fa-brands fa-facebook"></i></li></li></a>
-                        <a href="#"><li><i class="fa-brands fa-twitter"></i></li></li></a>
-                      </ul> 
-                  </div>
-                    <h2> Nam Hao Tra Ngo</h2>
-                    <h4> Gruppemedlem </h4>
-                     <!-- Skriv inn informasjon om deg selv i paragrafen under-->
-                    <p> </p>
+                    <div class="img-box">
+                        <img src="Bilder/Picture1.png" class="img-responsive">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        </ul>
                     </div>
-                 
-</section>
+                    <h2>Simen Amundsen</h2>
+                    <h4>Gruppemedlem/leder</h4>
+                    <p>Liker å være i fysisk aktivitet og sosial sammenhenger.</p>
+                </div>
 
+                <!-- Lamek Tesfazghi -->
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture2.png" class="img-responsive">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                    <h2><a href="Biografi/lamek.html" target="_blank">Lamek Tesfazghi</a></h2>
+                    <h4>Gruppemedlem</h4>
+                    <p>Intressert i fotball og basket på fritiden. Går siste året IT. Har skrevet om mine styrker og svakheter på min side.</p>
+                </div>
 
+                <!-- Daniel Vu -->
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture3.png" class="img-responsive">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                    <h2>Daniel Vu</h2>
+                    <h4>Gruppemedlem</h4>
+                    <p></p>
+                </div>
 
-  </body>
-  </html>
+                <!-- Nam Hao Tra Ngo -->
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture4.png" class="img-responsive">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        </ul>
+                    </div>
+                    <h2>Nam Hao Tra Ngo</h2>
+                    <h4>Gruppemedlem</h4>
+                    <p></p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+</body>
+</html>
