Oppdaterte lamek.html og index.html med lenker

--- a/Kontakter/lamek.html
+++ b/Kontakter/lamek.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿<<!DOCTYPE html>
 <html lang="no">
 <head>
     <meta charset="UTF-8">
@@ -51,6 +51,14 @@
             font-size: 0.9em;
             color: #95a5a6;
         }
+
+        .back-link {
+            display: inline-block;
+            margin-top: 20px;
+            text-decoration: none;
+            color: #007bff;
+            font-size: 1em;
+        }
     </style>
 </head>
 <body>
@@ -59,7 +67,9 @@
         <h1>Om Lamek Tesfazghi</h1>
         <p>Hei, jeg heter Lamek Tesfazghi, og dette er min personlige side. Jeg studerer IT og Informasjonssystemer ved Universitetet i Agder.</p>
         <p>Mine sterke sider er design av brukervennlige løsninger, og teknologi som bidrar til samfunnsutvikling. Jeg har også kjennskap til Java, C#, og andre programmeringsspråk. Jeg ser frem til å bidra til prosjektet med innovative løsninger og samarbeid.</p>
+        <a href="../index.html" class="back-link">Tilbake til Hjem</a>
         <footer>&copy; 2024 Lamek Tesfazghi</footer>
     </div>
 </body>
 </html>
+
