--- a/index.html
+++ b/index.html
@@ -1,183 +1,105 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="no">
-=======
 <html>
->>>>>>> b7868c46fc1a7f91e2c368f3b4efed39a6817814
 <head>
     <title>IT Gruppe 14</title>
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet"
-<<<<<<< HEAD
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-</head>
-
-<body>
-    <section class="team">
-        <div class="container">
-            <h1>Vår gruppe</h1>
-            <div class="row">
-
-                <!-- Simen Amundsen -->
-                <div class="col-md-3 profile text-center">
-                    <div class="img-box">
-                        <img src="Bilder/Picture1.png" class="img-responsive">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                    <h2>Simen Amundsen</h2>
-                    <h4>Gruppemedlem/leder</h4>
-                    <p>Liker å være i fysisk aktivitet og sosial sammenhenger.</p>
-                </div>
-
-                <!-- Lamek Tesfazghi -->
-                <div class="col-md-3 profile text-center">
-                    <div class="img-box">
-                        <img src="Bilder/Picture2.png" class="img-responsive">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                    <h2><a href="Biografi/lamek.html" target="_blank">Lamek Tesfazghi</a></h2>
-                    <h4>Gruppemedlem</h4>
-                    <p>Intressert i fotball og basket på fritiden. Går siste året IT. Har skrevet om mine styrker og svakheter på min side.</p>
-                </div>
-
-                <!-- Daniel Vu -->
-                <div class="col-md-3 profile text-center">
-                    <div class="img-box">
-                        <img src="Bilder/Picture3.png" class="img-responsive">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                    <h2>Daniel Vu</h2>
-                    <h4>Gruppemedlem</h4>
-                    <p></p>
-                </div>
-
-                <!-- Nam Hao Tra Ngo -->
-                <div class="col-md-3 profile text-center">
-                    <div class="img-box">
-                        <img src="Bilder/Picture4.png" class="img-responsive">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        </ul>
-                    </div>
-                    <h2>Nam Hao Tra Ngo</h2>
-                    <h4>Gruppemedlem</h4>
-                    <p></p>
-                </div>
-
-            </div>
-        </div>
-    </section>
-=======
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
           crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-<!-- Navigation Bar -->
-<div class="navbar">
-  <a href="#home" class="active">Home</a>
-  <a href="#about">Tanken om</a> <!-- Updated the "About" link -->
-  <a href="#team">Team</a>
-  <a href="#projects">Prosjekt</a> <!-- Updated the "Projects" link -->
-  <a href="#contact">Contact</a>
-</div>
-
-<section class="team" id="team">
-  
-    <div class="container">
-        <h1>Vår gruppe</h1>
-        <div class="row">
-            <div class="col-md-3 profile text-center">
-                <div class="img-box">
-                    <img src="Bilder/Picture1.png" class="img-responsive">
-                    <ul>
-                        <a href="https://www.linkedin.com/in/simen-amundsen-38520126a/" target="_blank">
-                            <li><i class="fa-brands fa-linkedin-in"></i></li>
-                        </a>
-                    </ul>
-                </div>
-                <h2>Simen Amundsen</h2>
-                <h4>Gruppeleder</h4>
-                <p>Bachelorstudent i IT på Universitetet i Agder. Jeg interesserer meg for å være i fysisk aktivitet,
-                    sosiale sammenhenger og data generelt.</p>
-            </div>
-
-            <div class="col-md-3 profile text-center">
-                <div class="img-box">
-                    <img src="Bilder/Picture2.png" class="img-responsive">
-                    <ul>
-                        <a href="#" target="_blank">
-                            <li><i class="fa-brands fa-linkedin-in"></i></li>
-                        </a>
-                    </ul>
-                </div>
-                <h2>Lamek Tesfazghi</h2>
-                <h4>Gruppemedlem</h4>
-                <p>Interessert i fotball og basket på fritiden. Bachelorstudent som går siste året på IT.</p>
-            </div>
-
-            <div class="col-md-3 profile text-center">
-                <div class="img-box">
-                    <img src="Bilder/Picture3.jpg" class="img-responsive">
-                    <ul>
-                        <a href="https://www.linkedin.com/in/daniel-vu-19701a303" target="_blank">
-                            <li><i class="fa-brands fa-linkedin-in"></i></li>
-                        </a>
-                    </ul>
-                </div>
-                <h2>Daniel Vu</h2>
-                <h4>Gruppemedlem</h4>
-                <p>Jeg interesserer meg for fotball, liker å være sosial, og er bachelorstudent ved Universitetet i Agder.</p>
-            </div>
-
-            <div class="col-md-3 profile text-center">
-                <div class="img-box">
-                    <img src="Bilder/Picture4.png" class="img-responsive">
-                    <ul>
-                        <a href="https://www.linkedin.com/in/nam-ngo-421377327/" target="_blank">
-                            <li><i class="fa-brands fa-linkedin-in"></i></li>
-                        </a>
-                    </ul>
-                </div>
-                <h2>Nam Hao Tra Ngo</h2>
-                <h4>Gruppemedlem</h4>
-                <p>En student ved Universitetet i Agder (UIA) med spesiell interesse for digital design, 
-                  systemarkitektur, og programmering. Har erfaring innen Java, PHP og Lua-programmering, 
-                  samt kunnskap om informasjonssikkerhet og universell utforming.
-                </p>
-                </div>
-        </div>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">Tanken om</a>
+        <a href="#team">Team</a>
+        <a href="#projects">Prosjekt</a>
+        <a href="#contact">Contact</a>
     </div>
-</section>
 
-<!-- Noen tanker om oss som gruppe-->
-<h2 class="grouptext" id="about">Tanken om gruppen</h2>
-<p class="grouptext">Noen av medlemmene i gruppen vår har samarbeidet i flere fag, men ikke alle har samarbeidet med alle på gruppen. Derfor vil det bli spennende og gøy å se hvordan alle samarbeider og kommuniserer for utviklingen av prosjektet. Vi har en positiv fremstilling til prosjektet og samarbeidet som vil foregå. Vi vet cirka hva gruppemedlemmene kan tilby av kompetanse og ferdigheter, og håper også på at alle på gruppen kan utvikle seg med dette prosjektet.</p>
+    <section class="team" id="team">
+        <div class="container">
+            <h1>Vår gruppe</h1>
+            <div class="row">
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture1.png" class="img-responsive">
+                        <ul>
+                            <a href="https://www.linkedin.com/in/simen-amundsen-38520126a/" target="_blank">
+                            <li><i class="fa-brands fa-linkedin-in"></i></li>
+                            </a>
+                        </ul>
+                    </div>
+                    <h2>Simen Amundsen</h2>
+                    <h4>Gruppeleder</h4>
+                    <p>Bachelorstudent i IT på Universitetet i Agder. Jeg interesserer meg for å være i fysisk aktivitet, sosiale sammenhenger og data generelt.</p>
+                </div>
 
-<!-- Type prosjekt -->
-<h2 class="project" id="projects">Prosjekt</h2>
-<p class="project">Gruppen vår er enda ikke helt 100% sikre på hva slags type prosjekt vi vil jobbe med, men for nå ønsker vi et prosjekt der vi jobber med teknologisk utvikling. For eksempel, programvare, webtjeneste eller en applikasjon. Når det gjelder hva slags type bedrift vi vil samarbeide med, så er vi egentlig åpen for det meste. Det som er viktig for oss her er at vi finner en bedrift som kommuniserer og samarbeider med oss godt, og er interesserte i at vi skal lære.</p>
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture2.png" class="img-responsive">
+                        <ul>
+                            <a href="#" target="_blank">
+                            <li><i class="fa-brands fa-linkedin-in"></i></li>
+                            </a>
+                        </ul>
+                    </div>
+                    <h2>Lamek Tesfazghi</h2>
+                    <h4>Gruppemedlem</h4>
+                    <p>Interessert i fotball og basket på fritiden. Bachelorstudent som går siste året på IT.</p>
+                </div>
 
-<!-- Ambisjonsnivå -->
-<h2 class="ambitions">Ambisjoner</h2>
-<p class="ambitions">Vi har høye ambisjoner når det gjelder prosjektet vårt og vil sette høye krav til oss selv, som vi vil prøve å jobbe opp mot på best mulig måte.</p>
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture3.jpg" class="img-responsive">
+                        <ul>
+                            <a href="https://www.linkedin.com/in/daniel-vu-19701a303" target="_blank">
+                            <li><i class="fa-brands fa-linkedin-in"></i></li>
+                            </a>
+                        </ul>
+                    </div>
+                    <h2>Daniel Vu</h2>
+                    <h4>Gruppemedlem</h4>
+                    <p>Jeg interesserer meg for fotball, liker å være sosial, og er bachelorstudent ved Universitetet i Agder.</p>
+                </div>
 
->>>>>>> b7868c46fc1a7f91e2c368f3b4efed39a6817814
+                <div class="col-md-3 profile text-center">
+                    <div class="img-box">
+                        <img src="Bilder/Picture4.png" class="img-responsive">
+                        <ul>
+                            <a href="https://www.linkedin.com/in/nam-ngo-421377327/" target="_blank">
+                            <li><i class="fa-brands fa-linkedin-in"></i></li>
+                            </a>
+                        </ul>
+                    </div>
+                    <h2>Nam Hao Tra Ngo</h2>
+                    <h4>Gruppemedlem</h4>
+                    <p>En student ved Universitetet i Agder (UIA) med spesiell interesse for digital design, systemarkitektur, og programmering. Har erfaring innen Java, PHP og Lua-programmering, samt kunnskap om informasjonssikkerhet og universell utforming.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Tanken om gruppen -->
+    <h2 class="grouptext" id="about">Tanken om gruppen</h2>
+    <p class="grouptext">Noen av medlemmene i gruppen vår har samarbeidet i flere fag, men ikke alle har samarbeidet med alle på gruppen. Derfor vil det bli spennende og gøy å se hvordan alle samarbeider og kommuniserer for utviklingen av prosjektet. Vi har en positiv fremstilling til prosjektet og samarbeidet som vil foregå. Vi vet cirka hva gruppemedlemmene kan tilby av kompetanse og ferdigheter, og håper også på at alle på gruppen kan utvikle seg med dette prosjektet.</p>
+
+    <!-- Type prosjekt -->
+    <h2 class="project" id="projects">Prosjekt</h2>
+    <p class="project">Gruppen vår er enda ikke helt 100% sikre på hva slags type prosjekt vi vil jobbe med, men for nå ønsker vi et prosjekt der vi jobber med teknologisk utvikling. For eksempel, programvare, webtjeneste eller en applikasjon. Når det gjelder hva slags type bedrift vi vil samarbeide med, så er vi egentlig åpen for det meste. Det som er viktig for oss her er at vi finner en bedrift som kommuniserer og samarbeider med oss godt, og er interesserte i at vi skal lære.</p>
+
+    <!-- Ambisjonsnivå -->
+    <h2 class="ambitions">Ambisjoner</h2>
+    <p class="ambitions">Vi har høye ambisjoner når det gjelder prosjektet vårt og vil sette høye krav til oss selv, som vi vil prøve å jobbe opp mot på best mulig måte.</p>
+
+    <section class="contacts">
+        <h2>Contacts</h2>
+        <ul>
+            <li><a href="Kontakter/lamek.html">Lamek Tesfazghi</a></li>
+            <!-- Add more contacts as needed -->
+        </ul>
+    </section>
 </body>
 </html>
