--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         <h2>Contacts</h2>
         <ul>
             <li><a href="Kontakter/lamek.html">Lamek Tesfazghi</a></li>
-            <!-- Add more contacts as needed -->
+           
+             <li><a href= "C:\Users\danny\OneDrive\Documents\UIA\is_310\Is310Prosjekt\Kontakter\Daniel Vu.html"> Daniel Vu</a></li>
+              <!-- Add more contacts as needed -->
         </ul>
     </section>
 </body>
