Løste det med kontkat informasjon's linken til Daniel Vu i index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <ul>
             <li><a href="Kontakter/lamek.html">Lamek Tesfazghi</a></li>
            
-             <li><a href= "C:\Users\danny\OneDrive\Documents\UIA\is_310\Is310Prosjekt\Kontakter\Daniel Vu.html"> Daniel Vu</a></li>
+             <li><a href= "Kontakter/Daniel Vu.html Vu.html"> Daniel Vu</a></li>
               <!-- Add more contacts as needed -->
         </ul>
     </section>
