Fikset på index.html og vu.html

--- a/Kontakter/Vu.html
+++ b/Kontakter/Vu.html
@@ -63,7 +63,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="C:\Users\danny\OneDrive\Documents\UIA\is_310\Is310Prosjekt\Bilder\Picture3.jpg" alt="Bilde av Daniel Vu" class="profile-pic">
+        <img src="../Bilder/Picture3.jpg" alt="Bilde av Daneil Vu" class="profile-pic">
         <h1>Om Daniel Vu</h1>
         <p>Hei, Mitt navn er Daniel Vu, jeg er 22 år og studerer for tiden en bachelorgrad ved Universitetet i Agder. </p>
         <p>Gjennom studiene mine har jeg fått kunnskap innen utvikling av nettside og litt koding blant annet: Java, C, C#, python, samt jobbet med prosjekter relatert til nettdesign, utvikling av programmer og skaper gode informasjonssystemer som bidrar til samfunnet. Jeg trives med å jobbe i team, og er en god samarbeidspartner som finner kreative løsninger på utfordringer.</p>
