--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
         <h2>Contacts</h2>
         <ul>
             <li><a href="Kontakter/lamek.html">Lamek Tesfazghi</a></li>
-           
-             <li><a href= "C:\Users\danny\OneDrive\Documents\UIA\is_310\Is310Prosjekt\Kontakter\Daniel Vu.html"> Daniel Vu</a></li>
+            <li><a href="Kontakter/Vu.html"> Daniel Vu</a></li>
               <!-- Add more contacts as needed -->
         </ul>
     </section>
