La til Ngo - La til Ngo.html - La til Ngo Link på Index

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <!-- Legg til kontaktinformasjon -->
             <li><a href="Kontakter/Vu.html"> Daniel Vu</a></li>
              
+            <li><a href="Kontakter/Ngo.html">Nam Hao Tra Ngo</a></li>
 
         </ul>
     </section>
