La til Ngo - La til Ngo.html - La til Ngo Link på Index

--- a/Kontakter/Ngo.html
+++ b/Kontakter/Ngo.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../CSS/lamek.css" rel="stylesheet">
-    <title>Om Lamek Tesfazghi</title>
+    <title>Om Nam Ngo</title>
 </head>
 <body>
     <div class="container">
-        <img src="../Bilder/Picture2.png" alt="Bilde av Lamek Tesfazghi" class="profile-pic">
+        <img src="../Bilder/Picture4.png" alt="Bilde av Nam Ngo" class="profile-pic">
         <h1>Om Lamek Tesfazghi</h1>
         <p>Jeg heter Nam Hao Tra Ngo, og jeg er student ved Universitetet i Agder (UIA), 
             hvor jeg har utviklet en spesiell interesse for digital design, systemarkitektur, og programmering. 
