La til Ngo - La til Ngo.html - La til Ngo Link på Index

--- a/Kontakter/Ngo.html
+++ b/Kontakter/Ngo.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <img src="../Bilder/Picture4.png" alt="Bilde av Nam Ngo" class="profile-pic">
-        <h1>Om Lamek Tesfazghi</h1>
+        <h1>Om Nam Ngo</h1>
         <p>Jeg heter Nam Hao Tra Ngo, og jeg er student ved Universitetet i Agder (UIA), 
             hvor jeg har utviklet en spesiell interesse for digital design, systemarkitektur, og programmering. 
             Gjennom studiene mine har jeg fått erfaring med flere programmeringsspråk, inkludert Java, PHP og Lua, 
