lagt til de nye bildene

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
     </div>
 <!-- Home Section -->
 <section class="home" id="home">  
-    <h1>Vår gruppe</h1>
- 
-<!-- Team Section-->
+    <h1>Gruppe 14</h1>
+ </section>
+
+ <section class="innledning" id="innledning">
+ <h2> Velkommen oppdragsgiver!</h2>
 </section>
+ <!-- Team Section-->
     <section class="team" id="team">
         <div class="team-frame">
             
@@ -59,7 +62,7 @@
 
                 <div class="col-md-3 profile text-center">
                     <div class="img-box">
-                        <img src="Bilder/Picture3.jpg" class="img-responsive">
+                        <img src="Bilder/Picture3.png" class="img-responsive">
                         <ul>
                             <a href="https://www.linkedin.com/in/daniel-vu-19701a303" target="_blank">
                             <li><i class="fa-brands fa-linkedin-in"></i></li>
