lagt til ikoner for teknologier og endret på farge layout

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="navbar">
         <a href="#home">Hjem</a>
          <a href="#team">Team</a>
-         <a href="#about">Tanken om</a>
-        <a href="#projects">Prosjekt</a>
+        <a href="#about">Prosjektet</a>
+        <a href="#technology">Teknologier</a>
         <a href="#contact">Kontakter</a>
     </div>
 <!-- Home Section -->
@@ -88,13 +88,12 @@
                     <p>En student ved Universitetet i Agder (UIA) med spesiell interesse for digital design, systemarkitektur, og programmering. Har erfaring innen Java, PHP og Lua-programmering, samt kunnskap om informasjonssikkerhet og universell utforming.</p>
                 </div>
             </div>
+            <div class="info-box">
+                <h4 class="information"> Mer informasjon</h4>
+                <p class="information"> På <a href="#contact">Kontakter</a> kan du lese mer om hvert enkelt gruppemedlem. </p>
+                </div>  
         </div>
-      
     </section>
-    <div class="info-box">
-    <h4 class="information"> Mer informasjon</h4>
-    <p class="information"> På <a href="#contact">Kontakter</a> kan du lese mer om hvert enkelt gruppemedlem. </p>
-    </div>
     <!-- Tanken om gruppen -->
     <h2 class="grouptext" id="about">Tanken om gruppen</h2>
     <p class="grouptext">Noen av medlemmene i gruppen vår har samarbeidet i flere fag, men ikke alle har samarbeidet med alle på gruppen. Derfor vil det bli spennende og gøy å se hvordan alle samarbeider og kommuniserer for utviklingen av prosjektet. Vi har en positiv fremstilling til prosjektet og samarbeidet som vil foregå. Vi vet cirka hva gruppemedlemmene kan tilby av kompetanse og ferdigheter, og håper også på at alle på gruppen kan utvikle seg med dette prosjektet.</p>
@@ -107,6 +106,20 @@
     <h2 class="ambitions">Ambisjoner</h2>
     <p class="ambitions">Vi har høye ambisjoner når det gjelder prosjektet vårt og vil sette høye krav til oss selv, som vi vil prøve å jobbe opp mot på best mulig måte.</p>
 
+    <section class="technology" id="technology">
+        <div class="icon-frame">
+            <h1>Teknologier</h1>
+            <ul class="icon-list">
+                <li><div class="icon-box"><img src="Bilder/Teknologier/Asp.net.png" alt="Icon 1"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/Bootstrap.png" alt="Icon 2"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/Csharp.png" alt="Icon 3"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/CSS.svg" alt="Icon 4"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/Figma.png" alt="Icon 5"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/html.png" alt="Icon 6"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/Javascript.png" alt="Icon 7"></div></li>
+                <li><div class="icon-box"><img src="Bilder/Teknologier/Sql.png" alt="Icon 8"></div></li>
+        </div>
+        </section>
   
     <section class="contacts">
         <h2 id="contact">Kontakter</h2>
