Oppdatert Kontakter.html og index.html med riktige e-poster og LinkedIn-lenker

--- a/Kontakter/Kontakter.html
+++ b/Kontakter/Kontakter.html
@@ -38,7 +38,7 @@
                 <a href="mailto:nam.tra.ngo@example.com">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/nam-hao-tra-ngo" target="_blank">
+                <a href="https://www.linkedin.com/in/nam-ngo-421377327/" target="_blank">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </div>
@@ -55,7 +55,7 @@
                 <a href="mailto:lamek.tesfazghi@gmail.com">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/lamek-tesfazghi" target="_blank">
+                <a href="https://www.linkedin.com/in/lamek-tesfazghi-829398306/" target="_blank">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
             </div>
@@ -69,7 +69,7 @@
             <p>Hei, jeg heter Daniel Vu, og dette er min personlige side. Jeg er bachelorstudent ved Universitetet i Agder.</p>
             <p>Jeg interesserer meg for fotball, liker å være sosial, og jobber hardt for å lære nye ferdigheter innen IT og programmering.</p>
             <div class="icons">
-                <a href="mailto:danielvu.@uia.no">
+                <a href="mailto:danielvu.uia.no">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/daniel-vu-19701a303" target="_blank">
