--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="info-box" id="about">
                     <h4 class="information"> Mer informasjon</h4>
-                    <p class="information"> På <a href="#contact">Kontakter</a> kan du lese mer om hvert enkelt gruppemedlem. </p>
+                    <p class="information"> På <a href="Kontakter/kontakter.html">Kontakter</a> kan du lese mer om hvert enkelt gruppemedlem. </p>
                 </div>
             </div>
         </section>
