--- a/Kontakter/Kontakter.html
+++ b/Kontakter/Kontakter.html
@@ -12,19 +12,21 @@
     <div class="container">
         <img src="../Bilder/Picture1.png" alt="Bilde av Simen Amundsen" class="profile-pic">
         <div class="profile-info">
-            <h1>Om Simen Amundsen</h1>
-            <p>Hei, jeg heter Simen Amundsen, og dette er min personlige side. Jeg er sisteårig bachelorstudent på IT og Informasjonssystemer ved Universitetet i Agder.</p>
-            <p>Jeg foretrekker å designe nettsider og applikasjoner som gir en innbydende følelse til brukeren, og som gir en effektiv brukeropplevelse.</p>
-            <p>Jeg har innsikt i Java, C#, og andre programmeringsspråk, noe som gir meg en bedre forståelse av utviklingsprosesser. Jeg er også engasjert i å lære nye teknologier for å forbedre mine ferdigheter.</p>
-            <div class="icons">
-                <a href="mailto:simencamu@hotmail.com">
-                    <i class="fa-solid fa-envelope"></i>
-                </a>
-                <a href="https://www.linkedin.com/in/simen-amundsen-38520126a/" target="_blank">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
-            </div>
-        </div>
+            <h1>
+                <h1>Om Simen Amundsen</h1>
+                <p>Hei, jeg heter Simen Amundsen, og dette er min personlige side. Jeg er sisteårig bachelorstudent på IT og Informasjonssystemer ved Universitetet i Agder.</p>
+                <p>Jeg foretrekker å designe nettsider og applikasjoner som gir en innbydende følelse til brukeren, og som gir en effektiv brukeropplevelse.</p>
+                <p>Jeg har innsikt i Java, C#, og andre programmeringsspråk, noe som gir meg en bedre forståelse av utviklingsprosesser. Jeg er også engasjert i å lære nye teknologier for å forbedre mine ferdigheter. I denne delen av prosjektet vil jeg fokusere på frontend- og backend-delen av prosjektet.</p>
+                <p> I denne delen av prosjektet vil jeg fokusere på frontend- og backend-delen av prosjektet.</p>
+                <div class="icons">
+                    <a href="mailto:simencamu@hotmail.com">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/simen-amundsen-38520126a/" target="_blank">
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                </div>
+</div>
     </div>
 
     <div class="container">
@@ -34,6 +36,7 @@
             <p>Jeg heter Nam Hao Tra Ngo, og jeg studerer ved Universitetet i Agder. Jeg er interessert i digital design, systemarkitektur, og programmering.</p>
             <p>Jeg har erfaring med Java, PHP, Lua, samt kunnskap innen informasjonssikkerhet og universell utforming.</p>
             <p>Gjennom mine studier har jeg jobbet med flere programmeringsspråk og teknologier, og jeg ser frem til å bidra med innovative løsninger i prosjektet.</p>
+            <p>Jeg vil fokusere mest på frontend- og backend-delen av prosjektet denne gangen.</p>
             <div class="icons">
                 <a href="mailto:nam.tra.ngo@example.com">
                     <i class="fa-solid fa-envelope"></i>
@@ -51,6 +54,7 @@
             <h1>Om Lamek Tesfazghi</h1>
             <p>Hei, jeg heter Lamek Tesfazghi, og dette er min personlige side. Jeg studerer IT og Informasjonssystemer ved Universitetet i Agder.</p>
             <p>Mine sterke sider er design av brukervennlige løsninger og teknologi som bidrar til samfunnsutvikling. Jeg har også kjennskap til Java, C#, og andre programmeringsspråk.</p>
+            <p>Min rolle i dette prosjektet vil være å jobbe med UI/UX-design og frontend-aspektet av prosjektet.</p>
             <div class="icons">
                 <a href="mailto:lamek.tesfazghi@gmail.com">
                     <i class="fa-solid fa-envelope"></i>
@@ -68,8 +72,9 @@
             <h1>Om Daniel Vu</h1>
             <p>Hei, jeg heter Daniel Vu, og dette er min personlige side. Jeg er bachelorstudent ved Universitetet i Agder.</p>
             <p>Jeg interesserer meg for fotball, liker å være sosial, og jobber hardt for å lære nye ferdigheter innen IT og programmering.</p>
+            <p>Min rolle vil være å holde styr på at ting blir gjort, altså skal jeg være Scrum Master og jobbe med UI/UX-design på det prosjektet vi velger å samarbeide på.</p>
             <div class="icons">
-                <a href="mailto:danielvu.uia.no">
+                <a href="mailto:danielvu@uia.no">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/daniel-vu-19701a303" target="_blank">
